ajustements pour python 10 / ubuntu

--- a/noethys/Doc/lancer_noethys.desktop
+++ b/noethys/Doc/lancer_noethys.desktop
@@ -2,4 +2,4 @@
 Type=Application
 Name=Noethys-Matthania
 Exec=/home/noegest/Noethys-Matthania/lancer_noethys.sh
-Icon=/home/noegest/Noethys-Matthania/noethys/Static/Images/icone.ico
+Icon=/home/noegest/Noethys-Matthania/noethys/Static/Images/32x32/Nomadhys.png
